(copy_files
 (files ../config/ocannl_config))

(test
 (name moons_demo_variant)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules moons_demo_variant)
 (libraries ocannl datasets)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name einsum_trivia_exec)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules einsum_trivia_exec)
 (libraries ocannl)
 (preprocess
  (pps ppx_ocannl ppx_here)))

(test
 (name test_conv_syntax)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_conv_syntax)
 (libraries base einsum_parser stdio))

(test
 (name test_print_style)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_print_style)
 (libraries ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_surjectivity)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_surjectivity)
 (libraries ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_accumulation_semantics)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_accumulation_semantics)
 (libraries ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(library
 (name einsum_tutorials)
 (package neural_nets_lib)
 (inline_tests
  (deps
   ocannl_config
   (env_var OCANNL_BACKEND)))
 (libraries base dynlink ocannl)
 (modules einsum_trivia surjectivity)
 (preprocess
  (pps ppx_here ppx_expect ppx_inline_test ppx_ocannl))
 (modes best))

(test
 (name inline_permuted_view)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules inline_permuted_view)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(rule
 (alias runtest)
 (package neural_nets_lib)
 (target inline_permuted_view-c_fwd.ll.actual)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (action
  (no-infer
   (progn
    (run
     %{dep:inline_permuted_view.exe}
     "--ocannl_output_debug_files_in_build_directory=true")
    (copy build_files/c_fwd.ll %{target})))))

(rule
 (alias runtest)
 (package neural_nets_lib)
 (action
  (diff
   "inline_permuted_view-c_fwd.ll.expected"
   "inline_permuted_view-c_fwd.ll.actual")))

(test
 (name test_einsum_capture)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_einsum_capture)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_interleave)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_interleave)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl ppx_sexp_conv)))

(test
 (name test_einsum_parser)
 (package neural_nets_lib)
 (modules test_einsum_parser)
 (libraries base ocannl stdio einsum_parser))

(test
 (name test_conv_padding)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_conv_padding)
 (libraries base arrayjit.ir ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_max_pool2d)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_max_pool2d)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_tropical_kernel)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_tropical_kernel)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_padding_reset)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_padding_reset)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))
