(copy_files
 (files ../config/ocannl_config))

(executable
 (name micrograd_demo_logging)
 (modules micrograd_demo_logging)
 (libraries ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(subdir
 config
 (rule
  (target ocannl_backend.txt)
  (deps ocannl_config)
  (action
   (run %{dep:../../../arrayjit/bin/read_config.exe} "--read=backend"))))

(rule
 (alias runtest)
 (target
  (dir log_files))
 (action
  (run
   %{dep:micrograd_demo_logging.exe}
   "--ocannl_debug_backend=text"
   "--ocannl_log_file_stem=micrograd_demo_logging"
   "--ocannl_log_main_domain_to_stdout=false"
   "--ocannl_debug_log_to_stream_files=true")))

(rule
 (deps "log_files/%{read:config/ocannl_backend.txt}-0-0.log")
 (target "%{read:config/ocannl_backend.txt}-0-0.log.actual")
 (action
  (progn
   (run
    %{dep:../../tools/minised.exe}
    " = 0x[0-9a-fA-F]+"
    " = 0xNNNN"
    "log_files/%{read:config/ocannl_backend.txt}-0-0.log"
    "%{read:config/ocannl_backend.txt}-0-0.log.actual")
   (run
    %{dep:../../tools/minised.exe}
    " = 00[0-9a-fA-F]+"
    " = 0xNNNN"
    "%{read:config/ocannl_backend.txt}-0-0.log.actual"
    "%{read:config/ocannl_backend.txt}-0-0.log.actual")
   (run
    %{dep:../../tools/minised.exe}
    "\\([a-z0-9_]+\\)\\[0\\]{=[-.e0-9]+} = "
    "\\1[0]{=MAYBE UNINITIALIZED} = "
    "%{read:config/ocannl_backend.txt}-0-0.log.actual"
    "%{read:config/ocannl_backend.txt}-0-0.log.actual"))))

(rule
 (alias runtest)
 (action
  (diff
   "micrograd_demo_logging-%{read:config/ocannl_backend.txt}-0-0.log.expected"
   "%{read:config/ocannl_backend.txt}-0-0.log.actual")))

(test
 (name threefry4x32_demo)
 (modules threefry4x32_demo)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name top_down_prec)
 (modules top_down_prec)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(rule
 (alias runtest)
 (target
  (dir build_files))
 (action
  (progn
   (run
    %{dep:threefry4x32_demo.exe}
    "--ocannl_output_prec_in_ll_files=true"
    "--ocannl_output_debug_files_in_build_directory=true"
    "--ocannl_clean_up_artifacts_on_startup=true")
   (run
    %{dep:top_down_prec.exe}
    "--ocannl_output_prec_in_ll_files=true"
    "--ocannl_output_debug_files_in_build_directory=true"
    "--ocannl_clean_up_artifacts_on_startup=false"))))

(rule
 (deps "build_files/n3_fwd-unoptimized.ll")
 (target "n3_fwd_with_prec-unoptimized.ll.actual")
 (action
  (copy
   "build_files/n3_fwd-unoptimized.ll"
   "n3_fwd_with_prec-unoptimized.ll.actual")))

(rule
 (alias runtest)
 (action
  (diff
   "n3_fwd_with_prec-unoptimized.ll.expected"
   "n3_fwd_with_prec-unoptimized.ll.actual")))

(rule
 (deps "build_files/d_fwd-unoptimized.ll")
 (target "top_down_prec-unoptimized.ll.actual")
 (action
  (copy
   "build_files/d_fwd-unoptimized.ll"
   "top_down_prec-unoptimized.ll.actual")))

(rule
 (alias runtest)
 (action
  (diff
   "top_down_prec-unoptimized.ll.expected"
   "top_down_prec-unoptimized.ll.actual")))

(test
 (name test_vec_simple)
 (modules test_vec_simple)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_uniform_demo)
 (modules test_uniform_demo)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_threefry_precision)
 (modules test_threefry_precision)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(library
 (name operations_tutorials)
 (package neural_nets_lib)
 (inline_tests
  (deps ocannl_config))
 (libraries base dynlink ocannl)
 (modules hello_world_op zero2hero_1of7 primitive_ops test_threefry4x32)
 (preprocess
  (pps ppx_here ppx_expect ppx_inline_test ppx_ocannl))
 (modes best))
