(copy_files
 (files ../config/ocannl_config))

(test
 (name printbox_utils_test)
 (package neural_nets_lib)
 (deps ocannl_config)
 (modules printbox_utils_test)
 (libraries base ocannl stdio printbox-text)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(executable
 (name micrograd_demo_logging)
 (package neural_nets_lib)
 (public_name neural_nets_lib.micrograd_demo_logging)
 (modules micrograd_demo_logging)
 (libraries ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(subdir
 config
 (rule
  (target ocannl_backend.txt)
  (package neural_nets_lib)
  (deps
   ocannl_config
   (env_var OCANNL_BACKEND))
  (action
   (run %{dep:ocannl_read_config.exe} "--read=backend")))
 (rule
  (target ocannl_backend_extension.txt)
  (package neural_nets_lib)
  (deps
   ocannl_config
   (env_var OCANNL_BACKEND))
  (action
   (run %{dep:ocannl_read_config.exe} "--read=backend_extension"))))

(rule
 (target "backend-0-0.log.actual")
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (action
  (progn
   (run
    %{dep:micrograd_demo_logging.exe}
    "--ocannl_debug_backend=text"
    "--ocannl_log_file_stem=micrograd_demo_logging"
    "--ocannl_log_main_domain_to_stdout=false"
    "--ocannl_debug_log_to_stream_files=true"
    ; We have to clean up to avoid appending to results of a previous run
    "--ocannl_clean_up_log_files_on_startup=true")
   (run
    %{dep:../../tools/minised.exe}
    " = 0x[0-9a-fA-F]+"
    " = 0xNNNN"
    "log_files/%{read:config/ocannl_backend.txt}-0-0.log"
    "%{target}")
   (run
    %{dep:../../tools/minised.exe}
    " = 00[0-9a-fA-F]+"
    " = 0xNNNN"
    "%{target}"
    "%{target}")
   (run
    %{dep:../../tools/minised.exe}
    "\\([a-z0-9_]+\\)\\[0\\]{=[-.e0-9]+} = "
    "\\1[0]{=MAYBE UNINITIALIZED} = "
    "%{target}"
    "%{target}"))))

(rule
 (alias runtest)
 (package neural_nets_lib)
 (action
  (diff
   "micrograd_demo_logging-%{read:config/ocannl_backend.txt}-0-0.log.expected"
   "backend-0-0.log.actual")))

(test
 (name threefry4x32_demo)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules threefry4x32_demo)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_param_shape_error)
 (package neural_nets_lib)
 (modules test_param_shape_error)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl ppx_expect)))

(test
 (name row_beg_dims_regression)
 (package neural_nets_lib)
 (modules row_beg_dims_regression)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here)))

(test
 (name top_down_prec)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules top_down_prec)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name merge_buffer_static_verification)
 (package neural_nets_lib)
 (deps ocannl_config)
 (modules merge_buffer_static_verification)
 (libraries base ocannl stdio arrayjit.utils)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_buffer_loc)
 (package neural_nets_lib)
 (deps ocannl_config)
 (modules test_buffer_loc)
 (libraries base ocannl stdio arrayjit.utils)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name shard_transfer)
 (package neural_nets_lib)
 (deps ocannl_config)
 (modules shard_transfer)
 (libraries base ocannl stdio arrayjit.utils)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name context_host_access)
 (package neural_nets_lib)
 (deps ocannl_config)
 (modules context_host_access)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name for_print_test)
 (package neural_nets_lib)
 (deps ocannl_config)
 (modules for_print_test)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name zero_out_local_decl)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules zero_out_local_decl)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

; Generate both ll files and actual files in one rule using no-infer

(rule
 (target n3_fwd_with_prec-unoptimized.ll.actual)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (action
  (no-infer
   (progn
    (run
     %{dep:threefry4x32_demo.exe}
     "--ocannl_output_prec_in_ll_files=true"
     "--ocannl_output_debug_files_in_build_directory=true"
     "--ocannl_build_files_prefix=threefry4x32_demo")
    (copy build_files/threefry4x32_demo/n3_fwd-unoptimized.ll %{target})))))

(rule
 (targets top_down_prec-unoptimized.ll.actual top_down_prec.extension.actual)
 (package neural_nets_lib)
 (deps
  config/ocannl_backend_extension.txt
  ocannl_config
  (env_var OCANNL_BACKEND))
 (action
  (no-infer
   (progn
    (run
     %{dep:top_down_prec.exe}
     "--ocannl_output_prec_in_ll_files=true"
     "--ocannl_output_debug_files_in_build_directory=true"
     "--ocannl_build_files_prefix=top_down_prec")
    (copy
     build_files/top_down_prec/d_fwd-unoptimized.ll
     top_down_prec-unoptimized.ll.actual)
    (copy
     build_files/top_down_prec/d_fwd.%{read:config/ocannl_backend_extension.txt}
     top_down_prec.extension.actual)))))

(rule
 (targets
  zero_out_local_decl-unoptimized.ll.actual
  zero_out_local_decl.extension.actual)
 (package neural_nets_lib)
 (deps
  config/ocannl_backend_extension.txt
  ocannl_config
  (env_var OCANNL_BACKEND))
 (action
  (no-infer
   (progn
    (run
     %{dep:zero_out_local_decl.exe}
     "--ocannl_output_prec_in_ll_files=true"
     "--ocannl_output_debug_files_in_build_directory=true")
    (copy
     build_files/out_fwd-unoptimized.ll
     zero_out_local_decl-unoptimized.ll.actual)
    (copy
     build_files/out_fwd.%{read:config/ocannl_backend_extension.txt}
     zero_out_local_decl.extension.actual)))))

(rule
 (targets
  test_where_precision-unoptimized.ll.actual
  test_where_precision.extension.actual)
 (package neural_nets_lib)
 (deps
  config/ocannl_backend_extension.txt
  ocannl_config
  (env_var OCANNL_BACKEND))
 (action
  (no-infer
   (progn
    (run
     %{dep:test_where_precision.exe}
     "--ocannl_output_prec_in_ll_files=true"
     "--ocannl_output_debug_files_in_build_directory=true"
     "--ocannl_build_files_prefix=test_where_precision")
    (copy
     build_files/test_where_precision/where_fwd-unoptimized.ll
     test_where_precision-unoptimized.ll.actual)
    (copy
     build_files/test_where_precision/where_fwd.%{read:config/ocannl_backend_extension.txt}
     test_where_precision.extension.actual)))))

(rule
 (alias runtest)
 (package neural_nets_lib)
 (action
  (diff
   "n3_fwd_with_prec-unoptimized.ll.expected"
   "n3_fwd_with_prec-unoptimized.ll.actual")))

(rule
 (alias runtest)
 (package neural_nets_lib)
 (action
  (diff
   "top_down_prec-unoptimized.ll.expected"
   "top_down_prec-unoptimized.ll.actual")))

(rule
 (alias runtest)
 (package neural_nets_lib)
 (deps
  config/ocannl_backend_extension.txt
  (env_var OCANNL_BACKEND))
 (action
  (diff
   "top_down_prec.%{read:config/ocannl_backend_extension.txt}.expected"
   "top_down_prec.extension.actual")))

(rule
 (alias runtest)
 (package neural_nets_lib)
 (action
  (diff
   "zero_out_local_decl-unoptimized.ll.expected"
   "zero_out_local_decl-unoptimized.ll.actual")))

(rule
 (alias runtest)
 (package neural_nets_lib)
 (deps
  config/ocannl_backend_extension.txt
  (env_var OCANNL_BACKEND))
 (action
  (diff
   "zero_out_local_decl.%{read:config/ocannl_backend_extension.txt}.expected"
   "zero_out_local_decl.extension.actual")))

(rule
 (alias runtest)
 (package neural_nets_lib)
 (action
  (diff
   "test_where_precision-unoptimized.ll.expected"
   "test_where_precision-unoptimized.ll.actual")))

(rule
 (alias runtest)
 (package neural_nets_lib)
 (deps
  config/ocannl_backend_extension.txt
  (env_var OCANNL_BACKEND))
 (action
  (diff
   "test_where_precision.%{read:config/ocannl_backend_extension.txt}.expected"
   "test_where_precision.extension.actual")))

(test
 (name test_vec_simple)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_vec_simple)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_uniform_demo)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_uniform_demo)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_index_prec)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_index_prec)
 (libraries base arrayjit.ir arrayjit.utils stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_threefry_precision)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_threefry_precision)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_where_simple)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_where_simple)
 (libraries ocannl base stdio)
 (preprocess
  (pps ppx_here ppx_ocannl))
 (modes exe))

(test
 (name test_where_precision)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_where_precision)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_fma_logic)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_fma_logic)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_compose_logic)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_compose_logic)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_uniform1)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_uniform1)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_axis_labels)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_axis_labels)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_block_tensor)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_block_tensor)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_concat_ppx)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_concat_ppx)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_concat_graph)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_concat_graph)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_random_histograms)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_random_histograms)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_record_syntax)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_record_syntax)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name transformer_test)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules transformer_test)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl ppx_sexp_conv)))

(test
 (name attention_test)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules attention_test)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl ppx_sexp_conv)))

(test
 (name layer_norm_test)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules layer_norm_test)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl ppx_sexp_conv)))

(test
 (name decoder_only_test)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules decoder_only_test)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl ppx_sexp_conv)))

(test
 (name test_extend_dsls)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_extend_dsls)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl ppx_expect)))

(test
 (name hello_world_dim1x1)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules hello_world_dim1x1)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl ppx_expect)))

(test
 (name small_literal_tensor)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules small_literal_tensor)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl ppx_expect)))

(test
 (name zero2hero_1of7_exec)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules zero2hero_1of7_exec)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl ppx_expect)))

(test
 (name check_slice_shapes)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules check_slice_shapes)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_slice_alias)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_slice_alias)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name virtual_shared_loop)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules virtual_shared_loop)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name affine_injectivity)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules affine_injectivity)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name virtual_affine)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules virtual_affine)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name affine_lowering)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules affine_lowering)
 (libraries base ocannl stdio unix)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name virtual_diagonal)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules virtual_diagonal)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_tensor_persistence)
 (package neural_nets_lib)
 (modules test_tensor_persistence)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_execution_deps)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_execution_deps)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name rope_test)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules rope_test)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl ppx_sexp_conv)))

(executable
 (name test_log_stmt_format)
 (modules test_log_stmt_format)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(rule
 (target test_log_stmt_format.c.actual)
 (package neural_nets_lib)
 (deps ocannl_config)
 (action
  (no-infer
   (progn
    (run
     %{dep:test_log_stmt_format.exe}
     "--ocannl_backend=sync_cc"
     "--ocannl_output_debug_files_in_build_directory=true"
     "--ocannl_debug_log_from_routines=true"
     "--ocannl_log_level=2"
     "--ocannl_build_files_prefix=test_log_stmt_format")
    (copy
     build_files/test_log_stmt_format/c_fwd.c
     test_log_stmt_format.c.actual)))))

(rule
 (alias runtest)
 (package neural_nets_lib)
 (action
  (diff
   "test_log_stmt_format.c.expected"
   "test_log_stmt_format.c.actual")))

(test
 (name test_debug_name_collapse)
 (package neural_nets_lib)
 (deps ocannl_config)
 (modules test_debug_name_collapse)
 (libraries base arrayjit.ir stdio))

(test
 (name test_ident_blacklist)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_ident_blacklist)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_einsum3)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_einsum3)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))
(library
 (name operations_tutorials)
 (package neural_nets_lib)
 (inline_tests
  (deps
   ocannl_config
   (env_var OCANNL_BACKEND)))
 (libraries base dynlink ocannl stdio)
 (modules hello_world_op zero2hero_1of7 primitive_ops test_threefry4x32)
 (preprocess
  (pps ppx_here ppx_expect ppx_inline_test ppx_ocannl))
 (modes best))

(executable
 (name test_config_consistency)
 (modules test_config_consistency)
 (libraries base arrayjit.utils stdio))

(rule
 (target test_config_consistency.actual)
 (package neural_nets_lib)
 (deps ocannl_config)
 (action
  (with-stdout-to %{target}
   (run
    %{dep:test_config_consistency.exe}
    %{dep:../../ocannl_config.reference}
    %{dep:../../arrayjit/lib/utils.ml}
    %{dep:../../arrayjit/lib/backends.ml}
    %{dep:../../arrayjit/lib/c_syntax.ml}
    %{dep:../../arrayjit/lib/cc_backend.ml}
    %{dep:../../arrayjit/lib/context.ml}
    %{dep:../../arrayjit/lib/cuda_backend.ml}
    %{dep:../../arrayjit/lib/low_level.ml}
    %{dep:../../arrayjit/lib/tnode.ml}
    %{dep:../../arrayjit/lib/assignments.ml}
    %{dep:../../tensor/tensor.ml}
    %{dep:../../tensor/row.ml}))))

(rule
 (alias runtest)
 (package neural_nets_lib)
 (action (diff test_config_consistency.expected test_config_consistency.actual)))

(test
 (name test_metal_pool_bindings)
 (package neural_nets_lib)
 (modules test_metal_pool_bindings)
 (deps ocannl_config test_metal_pool_bindings.expected)
 (libraries
  base
  stdio
  ocannl
  (select
   test_metal_pool_bindings.ml
   from
   (metal -> test_metal_pool_bindings.real.ml)
   (-> test_metal_pool_bindings.missing.ml)))
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_metal_pool_slot_width)
 (package neural_nets_lib)
 (modules test_metal_pool_slot_width)
 (deps ocannl_config test_metal_pool_slot_width.expected)
 (libraries
  base
  stdio
  ocannl
  arrayjit.utils
  (select
   test_metal_pool_slot_width.ml
   from
   (metal -> test_metal_pool_slot_width.real.ml)
   (-> test_metal_pool_slot_width.missing.ml)))
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_one_hot_embedding_lookup)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules test_one_hot_embedding_lookup)
 (libraries base ocannl stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name debug_where_guard)
 (package neural_nets_lib)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (modules debug_where_guard)
 (libraries base ocannl stdio unix)
 (preprocess
  (pps ppx_here ppx_ocannl)))
