(copy_files
 (files ../config/ocannl_config))

(test
 (name moons_demo)
 (package neural_nets_lib)
 (modules moons_demo)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries ocannl dataprep)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name bigram)
 (package neural_nets_lib)
 (modules bigram)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries ocannl dataprep)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name bigram_mlp)
 (package neural_nets_lib)
 (modules bigram_mlp)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries ocannl dataprep)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name circles_conv)
 (package neural_nets_lib)
 (modules circles_conv)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries ocannl dataprep)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(library
 (name conv_data)
 (package neural_nets_lib)
 (modules conv_data)
 (libraries unix))

(test
 (name mnist_conv)
 (package neural_nets_lib)
 (modules mnist_conv)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries ocannl dataprep conv_data unix)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name cifar_conv)
 (package neural_nets_lib)
 (modules cifar_conv)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries ocannl dataprep conv_data unix)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name fsm_transformer)
 (package neural_nets_lib)
 (modules fsm_transformer)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name transformer_names)
 (package neural_nets_lib)
 (modules transformer_names)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base ocannl dataprep stdio)
 (preprocess
  (pps ppx_here ppx_ocannl)))
